--- a/index.html
+++ b/index.html
@@ -57,58 +57,119 @@
             VIDEOGAMEDUNKEY
         </p>
     </div>
-    <div class="grid grid-cols-3 gap-3 pt-8 mx-4">
-        <div>
-            <p class="text-lg">
-                Why?
-            </p>
-            <div class="pt-3">
-                <p>
-                    Videogamedunkey has been a great entertainer
-                    that really understands satire and how to enjoy
-                    life to his fullest, and I have personally taken a
-                    page out of his book.
+
+    <div class="hidden md:block">
+        <div class="grid grid-cols-3 gap-3 pt-8 mx-4">
+            <div>
+                <p class="text-lg">
+                    Why?
                 </p>
-                <a href="./pages/personal.html">
-                    <p class="text-blue-600 pt-5">
-                        More on Personal Influence page...
+                <div class="pt-3">
+                    <p>
+                        Videogamedunkey has been a great entertainer
+                        that really understands satire and how to enjoy
+                        life to his fullest, and I have personally taken a
+                        page out of his book.
                     </p>
-                </a>
+                    <a href="./pages/personal.html">
+                        <p class="text-blue-600 pt-5">
+                            More on Personal Influence page...
+                        </p>
+                    </a>
+                </div>
+            </div>
+            <div>
+                <p class="text-lg">
+                    Who is this?
+                </p>
+                <div class="pt-3">
+                    <p>
+                        Jason Gastrow or more popularly known as
+                        videogamedunkey is a famous youtuber that
+                        is very well known on many platforms, mostly
+                        for his humor of satire and laid back approach
+                        to his online career.
+                    </p>
+                    <a href="./pages/history.html">
+                        <p class="text-blue-600 pt-5">
+                            More on History...
+                        </p>
+                    </a>
+                </div>
+            </div>
+            <div>
+                <p class="text-lg">
+                    Can I see more?
+                </p>
+                <div class="pt-3">
+                    <p>
+                        Of course! There is a gallery of art, pictures,
+                        and some of his merch that he sells!
+                    </p>
+                    <a href="./pages/images.html">
+                        <p class="text-blue-600 pt-5">
+                            More on Images...
+                        </p>
+                    </a>
+                </div>
             </div>
         </div>
-        <div>
-            <p class="text-lg">
-                Who is this?
-            </p>
-            <div class="pt-3">
-                <p>
-                    Jason Gastrow or more popularly known as
-                    videogamedunkey is a famous youtuber that
-                    is very well known on many platforms, mostly
-                    for his humor of satire and laid back approach
-                    to his online career.
+    </div>
+
+    <div class="md:hidden">
+        <div class="gap-3 pt-8 mx-4">
+            <div>
+                <p class="text-lg">
+                    Why?
                 </p>
-                <a href="./pages/history.html">
-                    <p class="text-blue-600 pt-5">
-                        More on History...
+                <div class="pt-3">
+                    <p>
+                        Videogamedunkey has been a great entertainer
+                        that really understands satire and how to enjoy
+                        life to his fullest, and I have personally taken a
+                        page out of his book.
                     </p>
-                </a>
+                    <a href="./pages/personal.html">
+                        <p class="text-blue-600 pt-5">
+                            More on Personal Influence page...
+                        </p>
+                    </a>
+                </div>
             </div>
-        </div>
-        <div>
-            <p class="text-lg">
-                Can I see more?
-            </p>
-            <div class="pt-3">
-                <p>
-                    Of course! There is a gallery of art, pictures,
-                    and some of his merch that he sells!
+            <div class="pt-8">
+                <p class="text-lg">
+                    Who is this?
                 </p>
-                <a href="./pages/images.html">
-                    <p class="text-blue-600 pt-5">
-                        More on Images...
+                <div class="pt-3">
+                    <p>
+                        Jason Gastrow or more popularly known as
+                        videogamedunkey is a famous youtuber that
+                        is very well known on many platforms, mostly
+                        for his humor of satire and laid back approach
+                        to his online career.
                     </p>
-                </a>
+                    <a href="./pages/history.html">
+                        <p class="text-blue-600 pt-5">
+                            More on History...
+                        </p>
+                    </a>
+                </div>
+            </div>
+            <div class="pt-8">
+                <p class="text-lg">
+                    Can I see more?
+                </p>
+                <div class="pt-3">
+                    <p>
+                        Of course! There is a gallery of art, pictures,
+                        and some of his merch that he sells!
+                    </p>
+                    <a href="./pages/images.html">
+                        <p class="text-blue-600 pt-5">
+                            More on Images...
+                        </p>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
