--- a/pages/images.html
+++ b/pages/images.html
@@ -52,30 +52,57 @@
         <p class="text-2xl">
             Gallery
         </p>
-        <div class="grid grid-cols-3 pt-3">
-            <div class="ms-5">
-                <img src="../assets/Sdunkeyart.png" class="mx-auto" width="300px" alt="Dunkey fanart">
+
+        <div class="hidden md:block">
+            <div class="grid grid-cols-3 pt-3">
+                <div class="ms-5">
+                    <img src="../assets/Sdunkeyart.png" class="mx-auto" width="300px" alt="Dunkey fanart">
+                </div>
+                <div>
+                    <img src="../assets/SdunkeyWed.png" class="mx-auto" width="300px" alt="Dunkey's wedding">
+                </div>
+                <div>
+                    <img src="../assets/Sdunkeypod.png" class="mx-auto" width="300px" alt="Dunkeys face">
+                </div>
             </div>
-            <div>
-                <img src="../assets/SdunkeyWed.png" class="mx-auto" width="300px" alt="Dunkey's wedding">
-            </div>
-            <div>
-                <img src="../assets/Sdunkeypod.png" class="mx-auto" width="300px" alt="Dunkeys face">
+            <div class="grid grid-cols-3 pt-8">
+                <div>
+                    <img src="../assets/SdunkeyFig.png" class="mx-auto" width="300px" alt="dunkey figurine">
+                </div>
+                <div>
+                    <img src="../assets/Sbigmode.png" class="mx-auto" width="300px" alt="BigmodeLogo">
+                </div>
+                <div>
+                    <img src="../assets/Sdunkeymerch.png" class="mx-auto" width="300px" alt="dunkeys merch">
+                </div>
             </div>
         </div>
-        <div class="grid grid-cols-3 pt-8">
-            <div>
-                <img src="../assets/SdunkeyFig.png" class="mx-auto" width="300px" alt="dunkey figurine">
+
+        <div class="md:hidden">
+            <div class="pt-3 flex flex-col">
+                <div class="ms-5 mb-4">
+                    <img src="../assets/Sdunkeyart.png" class="w-full" alt="">
+                </div>
+                <div class="mb-4">
+                    <img src="../assets/SdunkeyWed.png" class="w-full" alt="">
+                </div>
+                <div class="mb-4">
+                    <img src="../assets/Sdunkeypod.png" class="w-full" alt="">
+                </div>
             </div>
-            <div>
-                <img src="../assets/Sbigmode.png" class="mx-auto" width="300px" alt="BigmodeLogo">
-            </div>
-            <div>
-                <img src="../assets/Sdunkeymerch.png" class="mx-auto" width="300px" alt="dunkeys merch">
+            <div class="flex flex-col">
+                <div class="mb-4">
+                    <img src="../assets/SdunkeyFig.png" class="w-full" alt="">
+                </div>
+                <div class="mb-4">
+                    <img src="../assets/Sbigmode.png" class="w-full" alt="">
+                </div>
+                <div class="mb-4">
+                    <img src="../assets/Sdunkeymerch.png" class="w-full" alt="">
+                </div>
             </div>
         </div>
     </div>
-
     <script src="../node_modules/flowbite/dist/flowbite.min.js"></script>
 </body>
 
