--- a/pages/personal.html
+++ b/pages/personal.html
@@ -48,7 +48,7 @@
         </div>
     </nav>
 
-    <div class="px-5 pb-2">
+    <div class="px-5 pb-2 hidden md:block">
         <p class="text-2xl">
             Why I Chose Dunkey
         </p>
@@ -65,6 +65,26 @@
                 understanding that was an intriguing lesson that helped me and others, to become your own person.
             </p>
             <img class="" src="../assets/l-intro-1663866568.jpg" alt="dunkeys face">
+        </div>
+    </div>
+
+    <div class="px-5 pb-2 md:hidden">
+        <p class="text-2xl">
+            Why I Chose Dunkey
+        </p>
+        <div class="pt-3 gap-3">
+            <img class="" src="../assets/l-intro-1663866568.jpg" alt="dunkeys face">
+            <p>
+                I chose videogamedunkey also known as, Dunkey, as my influential person as he was a very outstanding
+                character within the YouTube scene during the 2015s. Instead of being a basic person who decided to be
+                family friendly and make safe content, Dunkey decided to work on his own projects to show what he
+                wanted to express to his YouTube audience.
+            </p>
+            <p class="pt-3">
+                Starting off small he was very open about his opinions and
+                did not care about the hate or negative opinions of his videos which was a major inspiration to me, as
+                understanding that was an intriguing lesson that helped me and others, to become your own person.
+            </p>
         </div>
     </div>
 
@@ -85,7 +105,7 @@
         </p>
     </div>
 
-    <div class="px-5 pt-5">
+    <div class="px-5 pt-5 hidden md:block">
         <p class="text-2xl">
             Links
         </p>
@@ -153,6 +173,76 @@
             </div>
         </div>
     </div>
+
+    <div class="px-5 pt-5 md:hidden">
+        <p class="text-2xl">
+            Links
+        </p>
+        <p>
+            Here are some links to his social medias and other sites!
+        </p>
+        <div class="pt-3">
+            <div>
+                <p class="font-bold">
+                    YouTube
+                </p>
+                <a href="https://www.youtube.com/@videogamedunkey">
+                    <p class="text-blue-600">
+                        https://www.youtube.com
+                    </p>
+                </a>
+
+            </div>
+            <div>
+                <p>
+                    Twitter
+                </p>
+                <a href="https://twitter.com/vgdunkey?lang=en" class="text-blue-600">
+                    https://twitter.com/vgdunkey?lang=en
+                </a>
+            </div>
+            <div>
+                <p>
+                    BigMode
+                </p>
+                <a href="https://bigmode.com/" class="text-blue-600">
+                    https://bigmode.com/
+                </a>
+            </div>
+        </div>
+
+        <div class="">
+            <div>
+                <p>
+                    Second Channel
+                </p>
+                <a href="https://www.youtube.com/channel/UCGiJeCKTVKIxtaYZOidh19g">
+                    <p class="text-blue-600">
+                        https://www.youtube.com/channel
+                </p>
+                </a>
+                
+            </div>
+            <div>
+                <p>
+                    Twitch
+                </p>
+                <a href="https://www.twitch.tv/dunkstream" class="text-blue-600">
+                    https://www.twitch.tv/dunkstream
+                </a>
+                
+            </div>
+            <div>
+                <p>
+                    Merch Store
+                </p>
+                <a href="https://dunkeyscastle.com/" class="text-blue-600">
+                    https://dunkeyscastle.com/
+                </a>
+            </div>
+        </div>
+    </div>
+
 
     <script src="../node_modules/flowbite/dist/flowbite.min.js"></script>
 </body>
